--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>เว็บแอป</title>
+    <title>ค้นหารุ่นแบตเตอรี่</title>
 </head>
 <body>
     <iframe style="width: 100%; height: 100vh;" scrolling="yes" src="https://script.google.com/macros/s/AKfycbxCEZrMBWr5Gcbai5rccocJyOBSeOs7GSGwolQV1lF3KVP8AGBIQuAtvpm3uz3wSD0C/exec" frameborder="0"></iframe>
